# conex

./: .env.example  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  setup.sh
.history/: LICENSE_20260627065213  README_20260629054140.md  README_20260629054145.md  README_20260629054147.md
.history/app/: layout_20260627040938.tsx  layout_20260627052053.tsx  layout_20260627052057.tsx  layout_20260627052535.tsx  layout_20260627052613.tsx  layout_20260627052626.tsx  page_20260627050458.tsx  page_20260627050508.tsx  page_20260627050509.tsx  page_20260627050512.tsx  page_20260627052235.tsx  page_20260627052248.tsx  page_20260627052338.tsx  page_20260627052340.tsx  page_20260627052342.tsx
.history/app/(main)/ai-bridge/: page_20260627052853.tsx
.history/app/(main)/ai-bridge/components/: ai-suggestions_20260627052934.tsx  elevenlabs-player_20260627053003.tsx  elevenlabs-player_20260627053027.tsx  (+1 more)
.history/app/(main)/channels/: page_20260627053318.tsx
.history/app/(main)/chat/: page_20260627045028.tsx  page_20260627045155.tsx  page_20260627045306.tsx  page_20260627045325.tsx  page_20260627045605.tsx  page_20260627045656.tsx
.history/components/ui/: button_20260627054418.tsx  button_20260627054436.tsx  button_20260627054535.tsx  button_20260627054610.tsx  button_20260627054632.tsx  input_20260627054654.tsx
.history/scripts/: generate_demo_data_20260628000038.py
app/: globals.css  layout.tsx  page.tsx
app/(main)/ai-bridge/: page.tsx
app/(main)/ai-bridge/components/: ai-suggestions.tsx  elevenlabs-player.tsx
app/(main)/auth/login/: page.tsx
app/(main)/auth/register/: page.tsx
app/(main)/channels/: page.tsx
app/(main)/channels/components/: channel-list.tsx  zernio-connect.tsx
app/(main)/chat/: page.tsx
app/(main)/chat/components/: channel-switcher.tsx  chat-thread.tsx  message-bubble.tsx  multi-channel-indicator.tsx  rag-context-highlight.tsx  typing-indicator.tsx  voice-reply-button.tsx
app/(main)/dashboard/: page.tsx
app/(main)/dashboard/analytics/: page.tsx
backend/: main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: websocket.py
backend/app/api/v1/: ai.py  auth.py  conversations.py  messages.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: conversation.py
backend/app/models/: conversation.py  message.py  user.py
backend/app/rag/: retriever.py  vector_store.py
backend/app/schemas/: ai.py  user.py
backend/app/services/: elevenlabs_service.py  featherless_service.py  rag_service.py  zernio_integration.py
components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  table.tsx  tabs.tsx  tooltip.tsx
data/raw/multi_platform_dialogues/: dialogues.jsonl
docs/: architecture_tree.md
lib/: utils.ts
scripts/: download.sh  generate_demo_data.py  ingest_datasets.py
types/: cache-life.d.ts  routes.d.ts  validator.ts
(+9 files in other folders)
